// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collapse: render should not render collapse component child if it not "CollapseItem" 1`] = `
<div
  className="ui-collapse"
>
  <CollapseItem
    id="ui-collapse-item.1"
    isActive={false}
    onClick={[Function]}
    title="Collapse Item 2"
  >
    <p>
      Collapse content 2
    </p>
  </CollapseItem>
</div>
`;

exports[`Collapse: render should render collapse component items and first item should be expanded 1`] = `
<div
  className="ui-collapse"
>
  <CollapseItem
    id="сid1"
    isActive={true}
    onClick={[Function]}
    title="Collapse Item 1"
  >
    <p>
      Collapse content 1
    </p>
  </CollapseItem>
  <CollapseItem
    id="сid2"
    isActive={false}
    onClick={[Function]}
    title="Collapse Item 2"
  >
    <p>
      Collapse content 2
    </p>
  </CollapseItem>
</div>
`;

exports[`Collapse: render should render collapse component items with custom id 1`] = `
<div
  className="ui-collapse"
>
  <CollapseItem
    id="сid1"
    isActive={false}
    onClick={[Function]}
    title="Collapse Item 1"
  >
    <p>
      Collapse content 1
    </p>
  </CollapseItem>
  <CollapseItem
    id="сid2"
    isActive={false}
    onClick={[Function]}
    title="Collapse Item 2"
  >
    <p>
      Collapse content 2
    </p>
  </CollapseItem>
</div>
`;

exports[`Collapse: render should return "accordion" collapse component with two items 1`] = `
<div
  className="ui-collapse"
>
  <CollapseItem
    id="ui-collapse-item.0"
    isActive={false}
    onClick={[Function]}
    title="Collapse Item 1"
  >
    <p>
      Collapse content 1
    </p>
  </CollapseItem>
  <CollapseItem
    id="ui-collapse-item.1"
    isActive={false}
    onClick={[Function]}
    title="Collapse Item 2"
  >
    <p>
      Collapse content 2
    </p>
  </CollapseItem>
</div>
`;

exports[`Collapse: render should return collapse component with two items 1`] = `
<div
  className="ui-collapse"
>
  <CollapseItem
    id="ui-collapse-item.0"
    isActive={false}
    onClick={[Function]}
    title="Collapse Item 1"
  >
    <p>
      Collapse content 1
    </p>
  </CollapseItem>
  <CollapseItem
    id="ui-collapse-item.1"
    isActive={false}
    onClick={[Function]}
    title="Collapse Item 2"
  >
    <p>
      Collapse content 2
    </p>
  </CollapseItem>
</div>
`;

exports[`Collapse: render should return empty collapse component 1`] = `null`;
